# roadmuse

./: .gitignore  AGENTS.md  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: branch-checks.yml  main-pages.yml  pr-checks.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  config.py  main.py
backend/app/route/: __init__.py  agent.py  api.py  location_resolution.py  logic.py  models.py  schemas.py
backend/app/routers/: __init__.py  health.py
backend/tests/: test_health.py  test_route_agent.py  test_route_api.py  test_route_location_resolution.py  test_route_logic.py  test_route_models.py
docs/: ai-agent-build-guide.md  architecture.md  backend-api-structure.md  competitor-landscape.md  external-navigator-support.md  implementation-plan.md  lean-canvas.md  mvp-roadmap-v0.md  problem-solution.md  requirements.md  roadmap-and-estimates.md  ticket-estimates.md  use-cases.md  user-stories.md
docs/backend/: LocationRef.md  RouteIntent.md  RoutePlanResponse.md  RoutePreference.md
public/: manifest.webmanifest  sw.js
spa/: package.json  vitest.config.ts
spa/public/: manifest.webmanifest  sw.js
spa/src/: App.test.tsx  main.tsx  styles.css
src/: App.test.tsx  App.tsx  styles.css
src/api/: preferenceValidation.test.ts
src/components/: AppShell.tsx  BottomNav.tsx  PreferenceCard.tsx
src/context/: SettingsContext.test.tsx  SettingsContext.tsx
src/data/: helpPrompts.test.ts  helpPrompts.ts  theme.ts  (+7 more)
(+43 files in other folders)
