[project]
name = "roadmuse-backend"
version = "0.1.0"
description = "RoadMuse FastAPI + Pydantic AI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
